[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/map/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/map/room.gd" type="Script" id=2]
[ext_resource path="res://assets/items/dummy.png" type="Texture" id=3]

[sub_resource type="TileSet" id=1]
0/name = "dummy.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Room" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMapOriginal" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -393215, 2, 0, -393214, 2, 1, -393213, 2, 1, -393212, 2, 1, -393211, 2, 1, -393210, 2, 1, -393209, 2, 1, -393208, 2, 1, -393207, 2, 1, -393206, 2, 1, -393205, 2, 1, -393204, 2, 1, -393203, 2, 2, -327679, 2, 65536, -327678, 2, 65537, -327677, 2, 65537, -327676, 2, 65537, -327675, 2, 65537, -327674, 2, 65537, -327673, 2, 65537, -327672, 2, 65537, -327671, 2, 65537, -327670, 2, 65537, -327669, 2, 65537, -327668, 2, 65537, -327667, 2, 65538, -262143, 2, 65536, -262142, 2, 65537, -262141, 2, 65537, -262140, 2, 65537, -262139, 2, 65537, -262138, 2, 65537, -262137, 2, 65537, -262136, 2, 65537, -262135, 2, 65537, -262134, 2, 65537, -262133, 2, 65537, -262132, 2, 65537, -262131, 2, 65538, -196607, 2, 65536, -196606, 2, 65537, -196605, 2, 65537, -196604, 2, 65537, -196603, 2, 65537, -196602, 2, 65537, -196601, 2, 65537, -196600, 2, 65537, -196599, 2, 65537, -196598, 2, 65537, -196597, 2, 65537, -196596, 2, 65537, -196595, 2, 65538, -131072, 2, 0, -131071, 2, 65540, -131070, 2, 65537, -131069, 2, 65537, -131068, 2, 65537, -131067, 2, 65537, -131066, 2, 65537, -131065, 2, 65537, -131064, 2, 65537, -131063, 2, 65537, -131062, 2, 65537, -131061, 2, 65537, -131060, 2, 65537, -131059, 2, 65538, -65536, 2, 65536, -65535, 2, 65537, -65534, 2, 65537, -65533, 2, 65537, -65532, 2, 65537, -65531, 2, 65537, -65530, 2, 65537, -65529, 2, 65537, -65528, 2, 65537, -65527, 2, 65537, -65526, 2, 65537, -65525, 2, 65537, -65524, 2, 65537, -65523, 2, 65538, 0, 2, 65536, 1, 2, 65537, 2, 2, 65537, 3, 2, 65537, 4, 2, 65537, 5, 2, 65537, 6, 2, 65537, 7, 2, 65537, 8, 2, 65537, 9, 2, 65537, 10, 2, 65537, 11, 2, 65537, 12, 2, 65537, 13, 2, 65538, 65536, 2, 65536, 65537, 2, 65537, 65538, 2, 65537, 65539, 2, 65537, 65540, 2, 65537, 65541, 2, 65537, 65542, 2, 65537, 65543, 2, 65537, 65544, 2, 65537, 65545, 2, 65537, 65546, 2, 65537, 65547, 2, 65537, 65548, 2, 65537, 65549, 2, 65538, 131072, 2, 131072, 131073, 2, 4, 131074, 2, 65537, 131075, 2, 65537, 131076, 2, 65537, 131077, 2, 65537, 131078, 2, 65537, 131079, 2, 65537, 131080, 2, 65537, 131081, 2, 65537, 131082, 2, 65537, 131083, 2, 65537, 131084, 2, 65537, 131085, 2, 65538, 196609, 2, 65536, 196610, 2, 65537, 196611, 2, 65537, 196612, 2, 65537, 196613, 2, 65537, 196614, 2, 65537, 196615, 2, 65537, 196616, 2, 65537, 196617, 2, 65537, 196618, 2, 65537, 196619, 2, 65537, 196620, 2, 65537, 196621, 2, 65538, 262145, 2, 65536, 262146, 2, 65537, 262147, 2, 65537, 262148, 2, 65537, 262149, 2, 65537, 262150, 2, 65537, 262151, 2, 65537, 262152, 2, 65537, 262153, 2, 65537, 262154, 2, 65537, 262155, 2, 65537, 262156, 2, 65537, 262157, 2, 65538, 327681, 2, 65536, 327682, 2, 65537, 327683, 2, 65537, 327684, 2, 65537, 327685, 2, 65537, 327686, 2, 65537, 327687, 2, 65537, 327688, 2, 65537, 327689, 2, 65537, 327690, 2, 65537, 327691, 2, 65537, 327692, 2, 65537, 327693, 2, 65538, 393217, 2, 131072, 393218, 2, 131073, 393219, 2, 131073, 393220, 2, 131073, 393221, 2, 131073, 393222, 2, 131073, 393223, 2, 131073, 393224, 2, 131073, 393225, 2, 131073, 393226, 2, 131073, 393227, 2, 131073, 393228, 2, 131073, 393229, 2, 131074 )

[node name="TileMapRotated" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -393215, 2, 0, -393214, 2, 1, -393213, 2, 1, -393212, 2, 1, -393211, 2, 1, -393210, 2, 1, -393209, 2, 1, -393208, 2, 1, -393207, 2, 1, -393206, 2, 1, -393205, 2, 1, -393204, 2, 1, -393203, 2, 2, -327679, 2, 65536, -327678, 2, 65537, -327677, 2, 65537, -327676, 2, 65537, -327675, 2, 65537, -327674, 2, 65537, -327673, 2, 65537, -327672, 2, 65537, -327671, 2, 65537, -327670, 2, 65537, -327669, 2, 65537, -327668, 2, 65537, -327667, 2, 65538, -262143, 2, 65536, -262142, 2, 65537, -262141, 2, 65537, -262140, 2, 65537, -262139, 2, 65537, -262138, 2, 65537, -262137, 2, 65537, -262136, 2, 65537, -262135, 2, 65537, -262134, 2, 65537, -262133, 2, 65537, -262132, 2, 65537, -262131, 2, 65538, -196607, 2, 65536, -196606, 2, 65537, -196605, 2, 65537, -196604, 2, 65537, -196603, 2, 65537, -196602, 2, 65537, -196601, 2, 65537, -196600, 2, 65537, -196599, 2, 65537, -196598, 2, 65537, -196597, 2, 65537, -196596, 2, 65537, -196595, 2, 65538, -131072, 2, 0, -131071, 2, 65540, -131070, 2, 65537, -131069, 2, 65537, -131068, 2, 65537, -131067, 2, 65537, -131066, 2, 65537, -131065, 2, 65537, -131064, 2, 65537, -131063, 2, 65537, -131062, 2, 65537, -131061, 2, 65537, -131060, 2, 65537, -131059, 2, 65538, -65536, 2, 65536, -65535, 2, 65537, -65534, 2, 65537, -65533, 2, 65537, -65532, 2, 65537, -65531, 2, 65537, -65530, 2, 65537, -65529, 2, 65537, -65528, 2, 65537, -65527, 2, 65537, -65526, 2, 65537, -65525, 2, 65537, -65524, 2, 65537, -65523, 2, 65538, 0, 2, 65536, 1, 2, 65537, 2, 2, 65537, 3, 2, 65537, 4, 2, 65537, 5, 2, 65537, 6, 2, 65537, 7, 2, 65537, 8, 2, 65537, 9, 2, 65537, 10, 2, 65537, 11, 2, 65537, 12, 2, 65537, 13, 2, 65538, 65536, 2, 65536, 65537, 2, 65537, 65538, 2, 65537, 65539, 2, 65537, 65540, 2, 65537, 65541, 2, 65537, 65542, 2, 65537, 65543, 2, 65537, 65544, 2, 65537, 65545, 2, 65537, 65546, 2, 65537, 65547, 2, 65537, 65548, 2, 65537, 65549, 2, 65538, 131072, 2, 131072, 131073, 2, 4, 131074, 2, 65537, 131075, 2, 65537, 131076, 2, 65537, 131077, 2, 65537, 131078, 2, 65537, 131079, 2, 65537, 131080, 2, 65537, 131081, 2, 65537, 131082, 2, 65537, 131083, 2, 65537, 131084, 2, 65537, 131085, 2, 65538, 196609, 2, 65536, 196610, 2, 65537, 196611, 2, 65537, 196612, 2, 65537, 196613, 2, 65537, 196614, 2, 65537, 196615, 2, 65537, 196616, 2, 65537, 196617, 2, 65537, 196618, 2, 65537, 196619, 2, 65537, 196620, 2, 65537, 196621, 2, 65538, 262145, 2, 65536, 262146, 2, 65537, 262147, 2, 65537, 262148, 2, 65537, 262149, 2, 65537, 262150, 2, 65537, 262151, 2, 65537, 262152, 2, 65537, 262153, 2, 65537, 262154, 2, 65537, 262155, 2, 65537, 262156, 2, 65537, 262157, 2, 65538, 327681, 2, 65536, 327682, 2, 65537, 327683, 2, 65537, 327684, 2, 65537, 327685, 2, 65537, 327686, 2, 65537, 327687, 2, 65537, 327688, 2, 65537, 327689, 2, 65537, 327690, 2, 65537, 327691, 2, 65537, 327692, 2, 65537, 327693, 2, 65538, 393217, 2, 131072, 393218, 2, 131073, 393219, 2, 131073, 393220, 2, 131073, 393221, 2, 131073, 393222, 2, 131073, 393223, 2, 131073, 393224, 2, 131073, 393225, 2, 131073, 393226, 2, 131073, 393227, 2, 131073, 393228, 2, 131073, 393229, 2, 131074 )

[node name="TileMapItemSpawnPoints" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -262134, 0, 0, -131062, 0, 0, 131082, 0, 0, 262154, 0, 0 )

[node name="Items" type="Node2D" parent="."]
